--- a/css/styel.css
+++ b/css/styel.css
@@ -104,6 +104,9 @@ header{
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 20px;
 }
+/* .ssss{
+    margin-bottom: 100px;
+} */
 
 .sizemm {
     font-size: 21px;
